--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,16 +1,77 @@
 .navbar {
-    display: flex;
+   
     background-color: #000;
     padding: 20px 10px;
+    display: flex;
+    justify-content: space-between;
+
+    height: 90px;
   }
-  
+
+  .navbar ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+
+  }
+  .navbar span{
+
+    color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+  }
+  .usuario{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    margin-right: 20px;
+  }
+  .usuario img{
+    border-radius: 50%;
+    
+  }
+  .navbar p {
+    display: flex;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+  }
   .navbar a {
     color: #fff;
     margin-right: 1em;
     text-decoration: none;
     transition: 0.3s;
+    
   }
   
   .navbar a:hover {
     color: #999;
+  }
+
+  .log button{
+    
+    border: none;
+    padding: 6px 16px;
+    border-radius: 0.5rem;
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  .out{
+
+    background-color: red;
+  }
+
+  .in{
+    background-color: green;
+  }
+  .off{
+    display: none;
   }
