--- a/src/styles/jogos.module.css
+++ b/src/styles/jogos.module.css
@@ -1,11 +1,14 @@
-.todolist {
+.jogoslist {
     list-style: none;
     width: 500px;
     margin: 1em auto;
   }
   
-  .todolist li {
+  .jogoslist li {
     margin-bottom: 1em;
     padding-bottom: 1em;
     border-bottom: 1px solid #ccc;
+    
   }
+
+  
