--- a/src/styles/produto.module.css
+++ b/src/styles/produto.module.css
@@ -4,8 +4,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     margin-top: 40px;
+    width: 90%;
+    margin: 0 auto;
 
 
 }
@@ -69,4 +71,36 @@ border-radius: 0.25rem;
     cursor: pointer;
     color: red;
     margin-left: 10px;
+  }
+
+  .descricao{
+   width: 90%;
+   text-align: center;
+    padding: 40px;
+    margin: 10px auto;
+    font-size: 1.3rem;
+    margin-bottom: 60px;
+  }
+
+  .h3{
+
+
+    text-transform: uppercase;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
+  @media screen and (max-width:1100px) { 
+
+   .container{
+
+    flex-direction: column;
+
+   }
+   .descricao{
+    width: 100%;
+    
+   padding: 0;
+   }
+
+
   }
