--- a/src/styles/produto.module.css
+++ b/src/styles/produto.module.css
@@ -51,8 +51,9 @@ border-radius: 0.25rem;
   .container_preco{
 
     display: flex;
-    justify-content: center;
-    justify-content: space-around;
+  
+    flex-direction: column;
+
     color: #333;
     text-transform: uppercase;
     font-size: 26px;
