--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -75,3 +75,16 @@
   .off{
     display: none;
   }
+
+  .cart{
+
+ color: green;
+font-size: 1.3rem;
+
+
+  }
+
+  .like{
+    color: yellow;
+    font-size: 1.3rem;
+  }
