--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -99,6 +99,8 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
   }
 
 
@@ -110,6 +112,7 @@
     border-radius: 0.2rem;
     font-size: 1.2rem;
     color: #fff;
+    cursor: pointer;
   }
   .produto{
     display: none;
@@ -126,14 +129,39 @@
     gap: 10px;
     padding: 10px 20px;
   }
-  .form input{
 
+  .form input{
+    
     padding: 10px 30px;
     min-width: 440px;
     display: flex;
     border-radius: 0.5rem;
-    
+
+
   }
+
   .none{
     display: none;
+   
   }
+
+  .checkbox {
+
+
+display: flex;
+gap: 10px;
+
+
+
+
+  }
+
+  .checkbox input{
+
+   
+    min-width: 60px;
+    display: flex;
+   
+    
+  }
+ 
