--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -6,7 +6,7 @@
     gap: 20px;
     width: 80%;
     flex-direction: column;
-    border: 2px solid;
+    
     padding: 10px;
     max-width: 600px;
     border-radius: 1rem;
@@ -46,6 +46,7 @@
 
     margin: 30px auto;
     text-transform: uppercase;
+    font-size: 1.4rem;
   }
   .link{
     color: #333;
@@ -106,13 +107,17 @@
 
   .submit{
 
-    background-color: green;
+    background-color: #57C276;
     border: none;
-    padding: 10px 20px;
+    padding: 6px 20px;
     border-radius: 0.2rem;
     font-size: 1.2rem;
     color: #fff;
     cursor: pointer;
+  }
+  .submit:hover{
+
+    background-color: #19721E;
   }
   .produto{
     display: none;
@@ -132,8 +137,8 @@
 
   .form input{
     
-    padding: 10px 30px;
-    min-width: 440px;
+    padding: 7px 30px;
+    min-width: 600px;
     display: flex;
     border-radius: 0.5rem;
 
