--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,5 +4,12 @@ padding: 0;
 margin: 0;
 box-sizing: border-box;
 font-family: Helvetica, sans-serif;
-text-decoration: none
+text-decoration: none;
+
+}
+
+
+body{
+
+    overflow-y: scroll;
 }
