--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,114 +1,227 @@
 .navbar {
-   
-    background-color: #000;
-    padding: 20px 10px;
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 17px;
+  background: #333;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+ 
+  
+  
 
-    height: 10vh;
-  }
+}
 
+.menuBtn hr{
+  border-color: #fff; 
+  width: 25px;
+  height: 2px;
+ 
+
+  
+  
+}
+
+
+.menuBtn {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  
+  background: none;
+  border: none;
+  cursor: pointer;
+  
+  
+
+  
+ 
+  
+}
+
+.menuIcon {
+  
+  display: block;
+  
+  
+  width: 25px;
+  height: 2px;
+  background: #fff;
+  
+  
+  margin: 0.5rem auto;
+  transition: all 0.2s ease-in-out;
+  
+  
+
+
+}
+
+
+.menuListClosed {
+  display: none;
+}
+
+.menuListOpen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 79px;
+  width: 100%;
+  right: 0;
+  background: #fff;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.menuListOpen li {
+  margin: 10px 0;
+}
+
+.menuListOpen a {
+  font-size: 18px;
+}
+
+.usuario {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.log {
+  margin-right: 20px;
+  border-radius: 0.5rem;
+}
+
+.in {
+   border: none;
+  border-radius: 0.25rem;
+  color: #fff;
+  background-color: green;
+  padding: 7px 17px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.out {
+  border: none;
+  border-radius: 0.25rem;
+  background: red;
+  color: #fff;
+  padding: 7px 17px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.cart {
+  position: relative;
+}
+
+.cart:before {
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #f00;
+  position: absolute;
+  top: -4px;
+  right: -4px;
+}
+
+.like {
+  position: relative;
+}
+
+.like:before {
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #f00;
+  position: absolute;
+  top: -4px;
+  right: -4px;
+}
+
+.name{
+  display: none;
+}
+
+.usuario img{
+
+  border-radius: 50px;
+  cursor: pointer;
+  margin-right: 13px;
+}
+.navbar ul{
+
+  background-color: #333;
+}
+.navbar ul li a{
+
+  color: #fff;
+  
+  text-decoration: none;
+}
+.navbar ul li :hover{
+
+
+  color: aqua;
+}
+
+@media (min-width: 898px) {
   .navbar ul{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40px;
-
-  }
-  .navbar span{
-
-    color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-  }
-  .usuario{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-    margin-right: 20px;
-  }
-  .usuario img{
-    border-radius: 50%;
     
-  }
-  .navbar p {
-    display: flex;
-    color: #fff;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
-  }
-  .navbar a {
-    color: #fff;
-    margin-right: 1em;
-    text-decoration: none;
-    transition: 0.3s;
-    
-  }
-  
-  .navbar a:hover {
-    color: #999;
-  }
-
-  .log button{
-    
-    border: none;
-    padding: 6px 16px;
-    border-radius: 0.5rem;
-    color: #fff;
-    cursor: pointer;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    list-style: none;
+    gap: 20px;
+    padding: 10px 20px;
+    font-weight: 600;
+    font-size: 1.1rem;
    
     
+  
+  
+  
   }
-  .out{
 
-    background-color: red;
-  }
+  .navbar ul li a{
 
-  .in{
-    background-color: green;
+    color: #fff;
+    text-decoration: none;
   }
-  .off{
+ 
+  .menuBtn {
     display: none;
   }
 
-  .cart{
-
- color: green;
-font-size: 1.3rem;
-
-
+  .menuListClosed {
+    display: flex;
+    justify-content: flex-end;
   }
 
-  .like{
-    color: yellow;
-    font-size: 1.3rem;
+  .menuListOpen {
+    position: static;
+    display: flex;
+    justify-content: flex-end;
+    box-shadow: none;
   }
 
-  @media screen and (max-width:730px){
+  .menuListOpen li {
+    margin: 0 20px;
+  }
 
+  .usuario {
+    margin-left: auto;
+  }
 
-    .usuario img {
-      border-radius: 50%;
-      display: none;
-      
-    }
-
-.usuario p {
-  display: none;
-
+  .log {
+    margin-right: 40px;
+  }
+  
 }
-
-.log{
-
-
-  margin-top: 12px;
-}
-
-  }
