--- a/src/styles/pedidos.module.css
+++ b/src/styles/pedidos.module.css
@@ -22,12 +22,13 @@
   background-color: #f8f8f8;
   border: 1px solid #ddd;
   padding: .35em;
+  
 }
 .table th{
 
     text-align: center;
   border-bottom: inset;
-  padding: 10px;
+  padding: 20px;
   
 }
 .table td{
@@ -35,6 +36,7 @@
 
     padding-top: 15px;
   text-align: center;
+  height: 80px;
  
 }
 
@@ -43,10 +45,11 @@
   .table {
     border: 0;
     width: 90%;
+    
   }
 
   .table caption {
-    font-size: 1em;
+    font-size: 1.4em;
   }
   
   .table thead {
@@ -58,12 +61,13 @@
     padding: 0;
     position: absolute;
     width: 1px;
+    
   }
   
   .table tr {
     border-bottom: 3px solid #ddd;
     display: block;
-    margin-bottom: .625em;
+    margin-bottom: 2.625em;
   }
   
   .table td {
@@ -71,6 +75,8 @@
     display: block;
     font-size: .8em;
     text-align: center;
+    height: 50px;
+    
   }
 
  
