--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -3,59 +3,36 @@
   justify-content: space-between;
   align-items: center;
   padding: 17px;
-  background: #333;
+  background: #3e5b9b;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
- 
-  
-  
-
 }
 
-.menuBtn hr{
-  border-color: #fff; 
+.menuBtn hr {
+  border-color: #fff;
   width: 25px;
   height: 2px;
- 
-
-  
-  
 }
-
 
 .menuBtn {
   position: absolute;
   top: 17px;
   right: 20px;
-  
+
   background: none;
   border: none;
   cursor: pointer;
-  
-  
-
-  
- 
-  
 }
 
 .menuIcon {
-  
   display: block;
-  
-  
+
   width: 25px;
   height: 2px;
   background: #fff;
-  
-  
+
   margin: 0.5rem auto;
   transition: all 0.2s ease-in-out;
-  
-  
-
-
 }
-
 
 .menuListClosed {
   display: none;
@@ -95,7 +72,7 @@
 }
 
 .in {
-   border: none;
+  border: none;
   border-radius: 0.25rem;
   color: #fff;
   background-color: green;
@@ -107,11 +84,12 @@
 .out {
   border: none;
   border-radius: 0.25rem;
-  background: red;
+  background: #a52323;
   color: #fff;
   padding: 7px 17px;
   font-size: 16px;
   cursor: pointer;
+  text-transform: lowercase;
 }
 
 .cart {
@@ -146,36 +124,31 @@
   right: -4px;
 }
 
-.name{
+.name {
   display: none;
 }
 
-.usuario img{
-
+.usuario img {
   border-radius: 50px;
   cursor: pointer;
   margin-right: 13px;
 }
-.navbar ul{
-
-  background-color: #333;
+.navbar ul {
+  background-color: #3e5b9b;
 }
-.navbar ul li a{
-
+.navbar ul li a {
   color: #fff;
-  
+
   text-decoration: none;
 }
-.navbar ul li :hover{
-
-
+.navbar ul li :hover {
   color: aqua;
 }
 
 @media (min-width: 898px) {
-  .navbar ul{
+  .navbar ul {
     display: flex;
-    
+
     justify-content: center;
     align-items: center;
     list-style: none;
@@ -183,19 +156,13 @@
     padding: 10px 20px;
     font-weight: 600;
     font-size: 1.1rem;
-   
-    
-  
-  
-  
   }
 
-  .navbar ul li a{
-
+  .navbar ul li a {
     color: #fff;
     text-decoration: none;
   }
- 
+
   .menuBtn {
     display: none;
   }
@@ -223,5 +190,4 @@
   .log {
     margin-right: 40px;
   }
-  
 }
