--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -93,35 +93,11 @@
 }
 
 .cart {
-  position: relative;
-}
-
-.cart:before {
-  content: "";
-  display: block;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: #f00;
-  position: absolute;
-  top: -4px;
-  right: -4px;
+  font-size: 20px;
 }
 
 .like {
-  position: relative;
-}
-
-.like:before {
-  content: "";
-  display: block;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: #f00;
-  position: absolute;
-  top: -4px;
-  right: -4px;
+  font-size: 20px;
 }
 
 .name {
@@ -145,7 +121,7 @@
   color: aqua;
 }
 
-@media (min-width: 898px) {
+@media (min-width: 940px) {
   .navbar ul {
     display: flex;
 
