--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,14 @@
-*{
-
-padding: 0;
-margin: 0;
-box-sizing: border-box;
-font-family: Helvetica, sans-serif;
-text-decoration: none;
-list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
+  text-decoration: none;
+  list-style: none;
 }
 
-
-body{
-
-    overflow-y: scroll;
+body {
+  overflow-y: scroll;
+  background-color: #fefefe;
+  color: #222;
 }
