--- a/src/styles/produto.module.css
+++ b/src/styles/produto.module.css
@@ -1,134 +1,81 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 
-.container{
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-top: 40px;
-    width: 90%;
-    margin: 0 auto;
-    min-height: 90vh;
-
-
+  width: 75%;
+  margin: 0 auto;
+  min-height: 93vh;
 }
 
-.title{
+.title {
+  text-transform: uppercase;
+  margin: 30px auto;
+}
 
-    text-transform: uppercase;
+.container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.75rem;
+}
+
+.img {
+  width: 320px;
+  height: 370px;
+}
+.container_preco {
+  display: flex;
+  justify-content: space-around;
+  color: #333;
+  text-transform: uppercase;
+  font-size: 26px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.icons_cart {
+  color: green;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.icons_like {
+  cursor: pointer;
+  color: red;
+  margin-left: 10px;
+}
+
+.descricao {
+  width: 100%;
+  text-align: start;
+  margin: 0 auto;
+  font-size: 1.4rem;
+  padding: 70px;
+}
+
+.h3 {
+  text-transform: uppercase;
+}
+
+.icon {
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1100px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
     margin: 40px auto;
+  }
+  .descricao {
+    width: 90%;
+    padding: 0;
+    margin: 40px auto;
+  }
+  .h3 {
+    margin-top: 30px;
+  }
 }
-
-.link{
-
-text-decoration: none;
-color: #fff;
-text-transform: uppercase;
-font-weight: 500;
-padding: 10px 16px;
-background-color: #A7419E;
-border-radius: 0.25rem;
-
-}
-.container img{
-
-
-    width: 100%;
-    height: 100%;
-    border-radius: 0.25rem;
-    
-}
-
-.img{
-
-
-    width: 400px;
-    height: 450px;
-  
-    
-   
-    
-  }
-  .container_preco{
-
-    display: flex;
-  
-    flex-direction: column;
-
-    color: #333;
-    text-transform: uppercase;
-    font-size: 26px;
-    padding: 10px;
-  }
-
-  .icons_cart{
-
-    color: green;
-    margin-right: 10px;
-    cursor: pointer;
-  }
-
-  .icons_like{
-
-    cursor: pointer;
-    color: red;
-    margin-left: 10px;
-  }
-
-  .descricao{
-   width: 90%;
-   text-align: center;
-    padding: 40px;
-    margin: 10px auto;
-    font-size: 1.3rem;
-    margin-bottom: 60px;
-  }
-
-  .h3{
-
-
-    text-transform: uppercase;
-    margin: 0 auto;
-    margin-top: 40px;
-  }
-  .amountdiv{
-    
-    padding: 5px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    font-size: 1.3rem;
-    
-  }
-
-  .icon{
-    font-size: 1.4rem;
-    cursor: pointer;
-  }
-
-  .valueTotal{
-    margin-top: 8px;
-
-background-color: #A7419E;
-padding: 7px;
-font-size: 1.3rem;
-color: #fff;
-
-
-  }
-  @media screen and (max-width:1100px) { 
-
-   .container{
-
-    flex-direction: column;
-
-   }
-   .descricao{
-    width: 100%;
-    
-   padding: 0;
-   }
-
-
-  }
